--- a/src/routes/global.css
+++ b/src/routes/global.css
@@ -20,6 +20,13 @@ body {
 
     line-height: 1.5;
     text-align: left;
+
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 body.dark-mode {
