--- a/src/routes/global.css
+++ b/src/routes/global.css
@@ -7,7 +7,7 @@
     --dark-mode-text-color: 228, 230, 235;
     --dark-mode-background-color: 24, 25, 26;
 
-    --background-transition: background-color 0.9s cubic-bezier(.15,1,.2,1)
+    --background-transition: background-color 1.5s cubic-bezier(0,0.9,.1,1)
 }
 
 @font-face{
